# CVE_Prioritizer

./: .env  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  cve_prioritizer.py  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
cve_prioritizer/: __init__.py  __main__.py  cve_prioritizer.py
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE.md  SECURITY.md  license
docs/templates/: report_template.html
scripts/: constants.py  helpers.py  report_generator.py
