[project]
name = "CVE Prioritizer"
description = "Streamline vulnerability patching with CVSS, EPSS, and CISA's Known Exploited Vulnerabilities Prioritize actions based on real-time threat information, gain a competitive advantage, and stay informed about the latest trends."
version = "1.4.1"
dependencies = [
    "setuptools",
    "requests",
    "python-dotenv",
    "termcolor",
]
requires-python = ">=3.8"
authors = [
    {name = "Mario Rojas", email = "cveprioritizer@proton.me"},
]
maintainers = [
  {name = "Mario Rojas", email = "cveprioritizer@proton.me"}
]

readme = "README.md"
license = {file = "LICENSE"}
keywords = ["CVE", "CVSS", "EPSS", "CISA", "Prioritize", "Vulnerability"]