[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cve-prioritizer"
version = "1.8.2"
description = "Streamline vulnerability patching with CVSS, EPSS, and CISA's Known Exploited Vulnerabilities Prioritize actions based on real-time threat information, gain a competitive advantage, and stay informed about the latest trends."
readme = "README.md"
license = { text = "BSD 3-Clause"}
authors = [
    {name = "Mario Rojas", email = "prioritizer@proton.me"},
]
maintainers = [
  {name = "Mario Rojas", email = "prioritizer@proton.me"}
]
dependencies = [
    "click>=8.0.3",
    "pandas>=1.5.3",
    "python-dotenv>=0.19.2",
    "requests>=2.32.3",
    "termcolor>=2.2.0"
]
requires-python = ">=3.8"
keywords = ["CVE", "CVSS", "EPSS", "CISA", "Prioritize", "Vulnerability"]

[project.scripts]
cve-prioritizer = "cve_prioritizer.cve_prioritizer:main"